[project]
name = "nldate"
version = "0.1.0"
description = "Natural language date parser"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "mypy>=2.1.0",
    "ruff>=0.15.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nldate"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "types-python-dateutil>=2.9.0.20260508",
]
